--- a/readme
+++ b/readme
@@ -1,6 +1,3 @@
-This version of Neon is still very barebones.
-It is missing lots of features that the Skript version of Neon has.
-I'm aiming on adding all of those features to the Java version too when I have the time.
-
-Neon Discord Server
+Neon, rewritten in Java!
+Check out the Neon discord for updates:
 https://discord.gg/nKEa5NxRew
